# CPP_Project

./: CMakeLists.txt  a
OpenCV_Stream/: CMakeLists(Conflicted copy 2018-12-03 from COREPY).txt  CMakeLists.txt  CMakeLists.txt.user.0504eaa  CMakeLists.txt.user.b9e78f7
OpenCV_Stream/src/: opencv.h
OpenCV_Stream/src/ui/: widget.cpp  widget.h  widget.ui
src/: main.cpp  opencv.cpp  opencv.h
src/opencv/: framerate.cpp  framerate.h  opencv.cpp  opencv.h
src/ui/: widget.cpp  widget.h  widget.ui
